fix search box white space issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,14 +8,8 @@ body {
     display: inline-flex;
 }
 
-.main-body div {
+.main-body > div {
     margin: 10px;
-}
-
-.border {
-    border-style: solid;    
-    border-width: 1px;
-    border-color: #ccc;
 }
 
 .block-header {
@@ -66,3 +60,17 @@ body {
     position: absolute;
     right: 5px;
 }
+
+
+/* general css classes*/
+
+.border {
+    border-style: solid;    
+    border-width: 1px;
+    border-color: #ccc;
+}
+
+/* .no-margin {
+    margin: 0;
+    padding: 0;
+} */
